finalizaçao do menu principal

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,14 +12,14 @@
 <body>
 
   <header class="bg-yellow">
-    <nav id="#main-menu" class="navbar navbar-expand-lg navbar-dark py-0">
+    <nav id="main-menu" class="navbar navbar-expand-lg navbar-dark py-0">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="/dist/img/logo-acquafiber.png" alt="logo acquafiber">
+          <img src="/dist/img/logo-acquafiber.png" class="img-fluid" alt="logo acquafiber">
         </a>
 
         <!--Links do whatsapp e instagram no mobile-->
-        <div class="d-inline-flex d-lg-none ms-auto px-4 gap-3 justify-content-end d-xsm-none">
+        <div class=" d-lg-none ms-auto px-4 gap-3 justify-content-end social-media">
           <a href="#">
             <img width="25" src="/dist/img/svg/whatsapp.svg" alt="whatsapp">
           </a>
