--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acquafiber</title>
   <!--Fonte-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans:wght@300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!--CSS-->
   <link rel="stylesheet" href="/dist/css/style.css">
 </head>
@@ -32,7 +35,7 @@
           <div id="menu-toggler"></div>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-          <ul class="navbar-nav gap-3 text-uppercase fz-14 fw-light align-items-center fw-semi-bold">
+          <ul class="navbar-nav gap-3 text-uppercase fz-16 ff-open-sans align-items-center fw-semi-bold">
             <!--Links do whatsapp e instagram no desktop-->
             <li class="nav-item d-none d-lg-flex gap-1">
               <a class="nav-link" href="#">
@@ -63,7 +66,227 @@
     </nav>
   </header>
 
+  <main id="main-home">
+    <div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-8">
+            <h1 class="fz-44 fw-bold ff-ubuntu text-white">
+              De <span class="text-yellow-2">SPA à hidromassagem</span>, somos campeões em variedade.
+            </h1>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="py-5 ff-nunito text-white fz-20">
+              <p>
+                A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo com mais 70 tipos de piscinas diferentes.
+              </p>
+            </div>
+            <button class="btn btn-gradient-2 text-white fz-16 fw-semi-bold text-uppercase d-flex align-items-center justify-content-center gap-2">
+              <img src="/dist/img/svg/btn-arrows.svg" alt="">
+              Conheça nossas piscinas
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <section id="introducao-catalogo">
+    <div class="container pt-awe-108 pb-awe-64">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="text-uppercase text-black-5 fz-18 ff-open-sans">
+            O MELHOR CATÁLOGO DE PISCINAS
+          </h2>
+        </div>
+        <div class="col-12 col-md-10 col-lg-5 pt-awe-16">
+          <h3 class="text-black-2 ff-ubuntu fz-">
+            Aqui você encontra o formato de piscina ideal para sua necessidade
+          </h3>
+        </div>
+        <div class="col-12 col-lg-6 offset-lg-1 text-end">
+          <div class="text-black-5 fz-18 ff-open-sans pt-awe-32 pb-awe-16 text-start">
+            <p>
+              Consulte a lista de modelos de piscinas abaixo e descubra qual se encaixa melhor no seu espaço. Temos o modelo ideal para você.
+            </p>
+          </div>
+          <a href="" class="text-orange fz-18 ff-open-sans fw-bold">
+            Baixe nosso catálogo completo
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="catalogo" class="container pt-awe-64 pb-awe-56">
+    <div class="position-relative ps-awe-40 pb-awe-32">
+      <h4 class="text-blue ff-ubuntu fz-24">
+        Principais modelos
+      </h4>
+    </div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+      <div class="col py-2">
+        <a href="#linha-indonésia" class="text-decoration-none">
+          <div class="card-modelo is-active">
+            <div>
+              <img src="/dist/img/linha-indonésia.png" class="img-fluid" alt="">
+            </div>
+            <span class="ff-open-sans fz-18 pt-awe-12 d-block">
+              Linha
+              <span class="text-uppercase fw-bold">
+                Indonésia
+              </span>
+            </span>
+            <span class="text-black-6 d-inline-flex gap-2">
+              <img src="/dist/img/svg/escada.svg" alt="">
+              3 modelos
+            </span>
+          </div>
+        </a>
+      </div>    
+    </div>
+    <div id="linha-indonésia" class="linha row">
+      
+    </div>
+  </section> 
+
+  <section id="duvidas">
+    <div class="container py-awe-108 py-lg-awe-64">
+      <div class="row">
+        <div class="col-12 col-lg-1 d-flex justify-content-center justify-content-lg-start pb-awe-32 pb-lg-0 position-relative gotas">
+          <div class="pt-awe-6">
+            <img width="60" src="/dist/img/svg/whatsapp.svg" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="pb-awe-16">
+            <h5 class="ff-ubuntu fz-32 text-white text-center text-lg-start">
+              Ficou com dúvida ou podemos te ajudar de outra forma?
+            </h5>
+          </div>
+          <div class="pt-awe-16 pb-awe-64 pb-lg-0 pt-lg-0">
+            <p class="ff-open-sans fz-18 text-white text-center text-lg-start">
+              Temos consultores preparados para te ajudar no que você precisar. Entre em contato e descubra como podemos te surpreender.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-end align-items-center">
+          <a href="" class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
+            fale com nosso atendimento
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="sobre" class="container pt-awe-96 pb-awe-150">
+    <div class="row justify-content-between">
+      <div class="col-12">
+        <h2 class="text-uppercase text-black-5 fz-18 ff-open-sans">
+          Sobre nós
+        </h2>
+      </div>
+      <div class="col-12 col-lg-5">
+        <h3 class="text-black-3 fw-light ff-ubuntu fz-44">
+          Pensou em piscina de qualidade e preço acessível? Pensou <span class="emphasis">Acquafiber</span>
+        </h3>
+      </div>
+      <div class="col-12 col-lg-6 py-awe-32 py-lg-0">
+        <div class="fz-18 ff-open-sans text-black-3">
+          <p>
+            Somos uma empresa que está há décadas no mercado de piscinas de fibra de vidro e nossos produtos têm excelente custo-benefício
+          </p>
+          <p>
+            A Acquafiber tem um catálogo que atende a todos os gostos e tem opções com SPA, Prainha, Hidromassagem, linha infantil entre outros. São mais de 70 modelos inspirados nas mais belas paisagens ao redor do mundo disponíveis para deixar a sua área de lazer completa.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer id="orcamento">
+    <div class="container">
+      <div class="row justify-content-center justify-content-lg-start">
+        <div class="col-12 col-lg-4 text-black-4">
+          <h4 class="fz-24 fw-bold ff-ubuntu">
+            Nossos contatos
+          </h4>
+          <div class="pt-awe-64 d-flex flex-lg-column flex-wrap gap-awe-32">
+            <div>
+              <h5 class="ff-open-sans fz-16 fw-semi-bold">
+                Endereço
+              </h5>
+              <p class="ff-open-sans fz-14">
+                Rua das Flores, Capim Macio, Natal / RN <br> CEP: 59.125-100
+              </p>
+            </div>
+            <div>
+              <h5 class="ff-open-sans fz-16 fw-semi-bold">
+                Fale pelo telefone
+              </h5>
+              <p class="ff-open-sans fz-14">
+                +55 84 9.9945.5686 | +55 84 3564.6986 <br>
+                <a href="mailto:atendimento@nobrepiscinas.com.br" class="text-black-3 text-orange-hover text-decoration-none">
+                  atendimento@nobrepiscinas.com.br
+                </a>
+              </p>
+            </div>
+            <div>
+              <h5 class="ff-open-sans fz-16 fw-semi-bold">
+                Nossas mídias
+              </h5>
+              <span class="d-inline-flex gap-3">
+                <a href="" class="">
+                  <img src="/dist/img/svg/instagram-dark.svg" alt="">
+                </a>
+                <a href="" class="">
+                  <img src="/dist/img/svg/whatsapp-dark.svg" alt="">
+                </a>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-10 col-lg-6 offset-lg-2 order-first order-lg-last px-lg-awe-32 pb-awe-64 pb-lg-0">
+          <form action="" class="ff-open-sans">
+            <h3 class="text-blue ff-ubuntu fz-32 text-center">
+              Solicite um orçamento
+            </h3>
+            <p class="text-center text-black-3 fz-18">
+              Preencha os campos abaixo para realizarmos um orçamento com o melhor custo-benefício do mercado.
+            </p>
+            <div class="d-flex flex-column gap-awe-22 fz-14 text-black-2 pt-awe-32 pb-awe-56">
+              <div>
+                <label>Nome</label>
+                <input type="text" placeholder="Digite seu nome">
+              </div>
+              <div>
+                <label>Telefone</label>
+                <input type="number" placeholder="Digite um número de telefone">
+              </div>
+              <div>
+                <label>E-mail</label>
+                <input type="email" placeholder="Digite seu e-mail">
+              </div>
+              <div>
+                <label>Cidade/UF</label>
+                <input class="form-control" type="text" placeholder="Digite a cidade e estado de instalação da piscina">
+              </div>
+            </div>
+            <button type="submit">Solicitar atendimento</button>
+          </form>
+        </div>
+      </div>
+    </div>    
+  </footer>
+
+  <div class="bg-blue-2 py-awe-32"></div>
+  <div class="bg-blue-3 d-flex justify-content-center py-awe-16">
+    <a href="https://agenciaweb.ifrn.edu.br/" target="_blank">
+      <img src="/dist/img/svg/logo-awe.svg" alt="logo da awe">
+    </a>
+  </div>
+
   <script src="/dist/js/plugins/bootstrap.bundle.min.js"></script>
-  <script type="module" src="/dist/js/index.js"></script>
+  <script src="/dist/js/index.js"></script>
 </body>
 </html>
