finalização do frontend do site

--- a/pages/index.html
+++ b/pages/index.html
@@ -64,10 +64,7 @@
               <a class="nav-link text-black-2 border-hover" href="#orcamento">orçamentos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black-2 border-hover" href="garantia.html">garantia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-black-2 border-hover" href="#footer">contatos</a>
+              <a class="nav-link text-black-2 border-hover" href="#contatos">contatos</a>
             </li>
           </ul>
         </div>
@@ -132,13 +129,12 @@
 
   <section id="piscinas" class="container pt-awe-64 pb-awe-56 px-0">
     <div class="position-relative ps-awe-40 pb-awe-32">
-      <h4 class="text-blue ff-ubuntu fz-24">
+      <h4 class="text-blue ff-ubuntu fz-24 fw-regular">
         Principais modelos
       </h4>
     </div>
     <div class="carrossel-linhas overflow-hidden px-awe-32 px-lg-0">
-      <div class="swiper-wrapper d-lg-flex flex-lg-wrap gap-lg-awe-22">
-        <!-- Slides -->
+      <div class="swiper-wrapper d-lg-flex flex-lg-wrap gap-lg-awe-32">
         <a id="modelo-1" href="#detalhes" class="swiper-slide is-active" data-modelo>
           <div>
             <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
@@ -150,113 +146,197 @@
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-2" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-lisboa.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Lisboa
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-3" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-portugal.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Portugal
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-4" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-chile.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Chile
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-5" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-brasil.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Brasil
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-6" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-italia.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Itália
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-7" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-miami.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Miami
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
-        <a id="modelo-8" href="#detalhes" class="swiper-slide" data-modelo>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
           <div>
-            <img src="/dist/img/modelos/linha-roma.png" class="img-fluid" alt="">
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
           </div>
           <span class="ff-open-sans fz-18 pt-awe-12 d-block">
             Linha
             <span class="text-uppercase fw-bold">
-              Roma
+              Indonésia
             </span>
           </span>
           <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
-            <img src="/dist/img/svg/escada.svg" alt="">
-            3 modelos
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
+          </span>
+        </a>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
+          <div>
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
+          </div>
+          <span class="ff-open-sans fz-18 pt-awe-12 d-block">
+            Linha
+            <span class="text-uppercase fw-bold">
+              Indonésia
+            </span>
+          </span>
+          <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
+          </span>
+        </a>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
+          <div>
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
+          </div>
+          <span class="ff-open-sans fz-18 pt-awe-12 d-block">
+            Linha
+            <span class="text-uppercase fw-bold">
+              Indonésia
+            </span>
+          </span>
+          <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
+          </span>
+        </a>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
+          <div>
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
+          </div>
+          <span class="ff-open-sans fz-18 pt-awe-12 d-block">
+            Linha
+            <span class="text-uppercase fw-bold">
+              Indonésia
+            </span>
+          </span>
+          <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
+          </span>
+        </a>
+        <a id="modelo-1" href="#detalhes" class="swiper-slide" data-modelo>
+          <div>
+            <img src="/dist/img/modelos/linha-indonesia.png" class="img-fluid" alt="">
+          </div>
+          <span class="ff-open-sans fz-18 pt-awe-12 d-block">
+            Linha
+            <span class="text-uppercase fw-bold">
+              Indonésia
+            </span>
+          </span>
+          <span class="text-black-6 fz-14 ff-open-sans d-inline-flex gap-2">
+            <div>
+              <img src="/dist/img/svg/escada.svg" alt="">
+            </div>
+            <span>3 modelos</span>
           </span>
         </a>
       </div>
@@ -483,6 +563,116 @@
           </div>
         </div>
       </div>
+      <div id="detalhe-13" class="container-fluid d-none" data-detalhe>
+        <div class="row px-awe-32">
+          <div class="col-12 col-lg-6 pt-awe-32 pt-lg-0">
+            <img src="/dist/img/modelos/linha-italia-detalhes.png" class="img-fluid img-detalhe" alt="">
+          </div>
+          <div class="col-12 col-lg-5 order-first order-lg-last">
+            <div class="d-block pb-awe-16">
+              <h3 class="emphasis-2 p-1 d-inline text-black-2 fz-24 ff-ubuntu fw-regular">
+                Linha <span class="fw-bold">Espanha</span>
+              </h3>
+            </div>
+            <span class="text-black-6 d-inline-flex gap-2">
+              <img src="/dist/img/svg/escada.svg" alt="">
+              5 modelos
+            </span>
+            <div class="ff-open-sans fz-16 text-black-4 pt-awe-16">
+              <p>
+                O cuidado em identificar pontos críticos na valorização de fatores subjetivos oferece uma interessante
+                oportunidade para verificação das formas de ação.
+              </p>
+              <p>
+                Do mesmo modo, a consulta aos diversos militantes promove a alavancagem do impacto na agilidade
+                decisória.
+              </p>
+            </div>
+            <p class="text-orange fz-16 ff-open-sans">
+              Ficou interessado? Venha conversar com nosso atendimento.
+            </p>
+            <a href="#orcamento" class="btn btn-blue-2 mt-awe-16 d-block d-md-inline-block">
+              Fazer Orçamento
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 d-flex justify-content-between px-awe-32 pt-awe-56 pb-3">
+            <h5 class="text-black-2 ff-ubuntu fz-24">
+              Nossos modelos
+            </h5>
+            <div class="d-flex gap-awe-16">
+              <button class="swiper-prev">
+                <img src="/dist/img/svg/next-prev-arrow.svg" alt="">
+              </button>
+              <button class="swiper-next">
+                <img src="/dist/img/svg/next-prev-arrow.svg" alt="">
+              </button>
+            </div>
+          </div>
+          <div class="col-12 p-0">
+            <div class="carrossel-tamanhos pt-awe-56 pb-awe-64 px-awe-32">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <h5 class="text-black-2 ff-open-sans fz-16 text-uppercase text-center">
+                    Espanha 740
+                  </h5>
+                  <div class="py-awe-12">
+                    <img src="/dist/img/modelo-grande.png" alt="">
+                  </div>
+                  <div class="text-black-4 ff-open-sans fz-14 px-2 position-absolute bottom-0">
+                    <span>Largura 7,4m | Prof. 1,5m</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <h5 class="text-black-2 ff-open-sans fz-16 text-uppercase text-center">
+                    Espanha 511
+                  </h5>
+                  <div class="py-awe-12">
+                    <img src="/dist/img/modelo-grande.png" alt="">
+                  </div>
+                  <div class="text-black-4 ff-open-sans fz-14 px-2 position-absolute bottom-0">
+                    <span>Largura 7,4m | Prof. 1,5m</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <h5 class="text-black-2 ff-open-sans fz-16 text-uppercase text-center">
+                    Espanha 510
+                  </h5>
+                  <div class="py-awe-12">
+                    <img src="/dist/img/modelo-medio.png" alt="">
+                  </div>
+                  <div class="text-black-4 ff-open-sans fz-14 px-2 position-absolute bottom-0">
+                    <span>Largura 7,4m | Prof. 1,5m</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <h5 class="text-black-2 ff-open-sans fz-16 text-uppercase text-center">
+                    Espanha 330
+                  </h5>
+                  <div class="py-awe-12">
+                    <img src="/dist/img/modelo-medio.png" alt="">
+                  </div>
+                  <div class="text-black-4 ff-open-sans fz-14 px-2 position-absolute bottom-0">
+                    <span>Largura 7,4m | Prof. 1,5m</span>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <h5 class="text-black-2 ff-open-sans fz-16 text-uppercase text-center">
+                    Espanha 300
+                  </h5>
+                  <div class="py-awe-12">
+                    <img src="/dist/img/modelo-medio.png" alt="">
+                  </div>
+                  <div class="text-black-4 ff-open-sans fz-14 px-2 position-absolute bottom-0">
+                    <span>Largura 7,4m | Prof. 1,5m</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -491,7 +681,7 @@
       <div class="row">
         <div class="col-12 d-flex justify-content-between px-awe-32 pt-awe-56">
           <div class="position-relative ps-awe-22">
-            <h4 class="text-black-4 ff-ubuntu fz-24">
+            <h4 class="text-black-4 ff-ubuntu fz-24 fw-regular">
               Outros modelos
             </h4>
           </div>
@@ -507,7 +697,7 @@
         <div class="col-12 p-0">
           <div class="carrossel-outras-linhas pt-awe-32 pb-awe-64 px-awe-32 overflow-hidden">
             <div class="swiper-wrapper">
-              <a href="#detalhes" class="swiper-slide">
+              <a id="modelo-13" href="#detalhes" class="swiper-slide" data-modelo>
                 <span class="ff-open-sans fz-18 d-block text-uppercase text-black-4">
                   Linha
                   <span class="text-uppercase fw-bold">
@@ -642,7 +832,7 @@
   <footer id="orcamento">
     <div class="container">
       <div class="row justify-content-center justify-content-lg-start">
-        <div class="col-12 col-lg-4 text-black-4">
+        <div class="col-12 col-lg-4 text-black-4" id="#contatos">
           <h4 class="fz-24 fw-bold ff-ubuntu">
             Nossos contatos
           </h4>
