atualizando a logo e adicionando um carrossel na seção 'main'

--- a/pages/index.html
+++ b/pages/index.html
@@ -73,7 +73,102 @@
   </header>
 
   <main id="main-home">
-    <div>
+    <div class="swiper-main position-relative overflow-hidden">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide" style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
+          <div style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-lg-8">
+                  <h1 class="fz-32 fz-sm-44 fw-bold ff-ubuntu text-white">
+                    De <span class="text-yellow-2">SPA à hidromassagem</span>, somos campeões em variedade.
+                  </h1>
+                </div>
+                <div class="col-12 col-lg-6">
+                  <div class="py-5 ff-nunito text-white fz-20">
+                    <p>
+                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo
+                      com mais 70 tipos de piscinas diferentes.
+                    </p>
+                  </div>
+                  <a href="#piscinas"
+                    class="btn btn-gradient-2 text-white fz-16 fw-semi-bold text-uppercase d-inline-flex align-items-center justify-content-center gap-2">
+                    <img src="/dist/img/svg/btn-arrows.svg" alt="">
+                    Conheça nossas piscinas
+                  </a>
+                </div>
+                <div class="col-12 d-flex gap-3 justify-content-end pt-awe-64 pb-awe-12">
+                  <div class="swiper-main-prev"></div>
+                  <div class="swiper-main-next"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
+          <div style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-lg-8">
+                  <h1 class="fz-32 fz-sm-44 fw-bold ff-ubuntu text-white">
+                    De <span class="text-yellow-2">SPA à hidromassagem</span>, somos campeões em variedade.
+                  </h1>
+                </div>
+                <div class="col-12 col-lg-6">
+                  <div class="py-5 ff-nunito text-white fz-20">
+                    <p>
+                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo
+                      com mais 70 tipos de piscinas diferentes.
+                    </p>
+                  </div>
+                  <a href="#piscinas"
+                    class="btn btn-gradient-2 text-white fz-16 fw-semi-bold text-uppercase d-inline-flex align-items-center justify-content-center gap-2">
+                    <img src="/dist/img/svg/btn-arrows.svg" alt="">
+                    Conheça nossas piscinas
+                  </a>
+                </div>
+                <div class="col-12 d-flex gap-3 justify-content-end pt-awe-64 pb-awe-12">
+                  <div class="swiper-main-prev"></div>
+                  <div class="swiper-main-next"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
+          <div style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-lg-8">
+                  <h1 class="fz-32 fz-sm-44 fw-bold ff-ubuntu text-white">
+                    De <span class="text-yellow-2">SPA à hidromassagem</span>, somos campeões em variedade.
+                  </h1>
+                </div>
+                <div class="col-12 col-lg-6">
+                  <div class="py-5 ff-nunito text-white fz-20">
+                    <p>
+                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo
+                      com mais 70 tipos de piscinas diferentes.
+                    </p>
+                  </div>
+                  <a href="#piscinas"
+                    class="btn btn-gradient-2 text-white fz-16 fw-semi-bold text-uppercase d-inline-flex align-items-center justify-content-center gap-2">
+                    <img src="/dist/img/svg/btn-arrows.svg" alt="">
+                    Conheça nossas piscinas
+                  </a>
+                </div>
+                <div class="col-12 d-flex gap-3 justify-content-end pt-awe-64 pb-awe-12">
+                  <div class="swiper-main-prev"></div>
+                  <div class="swiper-main-next"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+    <!-- <div>
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-8">
@@ -96,7 +191,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </main>
 
   <section id="introducao-piscinas">
