tornando a seção 'duvidas' fixa ao rolar a página

--- a/pages/index.html
+++ b/pages/index.html
@@ -2380,7 +2380,7 @@
   </section>
 
   <section id="duvidas">
-    <div class="container py-awe-108 py-lg-awe-64">
+    <div class="container py-awe-108 py-lg-awe-64 duvidas-fixo">
       <div class="row">
         <div
           class="col-12 col-lg-1 d-flex justify-content-center justify-content-lg-start pb-awe-32 pb-lg-0 position-relative gotas">
@@ -2402,6 +2402,23 @@
           </div>
         </div>
         <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-end align-items-center">
+          <a href="https://api.whatsapp.com/send?phone=5584999455686" class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
+            fale com nosso atendimento
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="container duvidas-sticky py-awe-16">
+      <div class="row">
+        <div class="col-1">
+          <img width="60" src="/dist/img/svg/whatsapp.svg" alt="">
+        </div>
+        <div class="col-3 px-0 d-flex align-items-center">
+          <h5 class="ff-open-sans fz-18 text-white">
+            Ficou com dúvida ou podemos te ajudar de outra forma?
+          </h5>
+        </div>
+        <div class="col-8 d-flex justify-content-end align-items-center">
           <a href="https://api.whatsapp.com/send?phone=5584999455686" class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
             fale com nosso atendimento
           </a>
@@ -2528,7 +2545,7 @@
     </a>
   </div>
 
-  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+  <script src="/dist/js/plugins/swiper-bundle.min.js"></script>
   <script src="/dist/js/plugins/bootstrap.bundle.min.js"></script>
   <script src="/dist/js/index.js"></script>
 </body>
