ajustes na seção 'dúvidas'

--- a/pages/index.html
+++ b/pages/index.html
@@ -75,8 +75,10 @@
   <main id="main-home">
     <div class="swiper-main position-relative overflow-hidden">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
-          <div style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
+        <div class="swiper-slide"
+          style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
+          <div
+            style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
             <div class="container">
               <div class="row">
                 <div class="col-12 col-lg-8">
@@ -87,7 +89,8 @@
                 <div class="col-12 col-lg-6">
                   <div class="py-5 ff-nunito text-white fz-20">
                     <p>
-                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo
+                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um
+                      catálogo
                       com mais 70 tipos de piscinas diferentes.
                     </p>
                   </div>
@@ -105,8 +108,10 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide" style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
-          <div style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
+        <div class="swiper-slide"
+          style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
+          <div
+            style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
             <div class="container">
               <div class="row">
                 <div class="col-12 col-lg-8">
@@ -117,7 +122,8 @@
                 <div class="col-12 col-lg-6">
                   <div class="py-5 ff-nunito text-white fz-20">
                     <p>
-                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo
+                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um
+                      catálogo
                       com mais 70 tipos de piscinas diferentes.
                     </p>
                   </div>
@@ -135,8 +141,10 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide" style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
-          <div style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
+        <div class="swiper-slide"
+          style="background: url(/dist/img/background-main.jpg) no-repeat; background-size: cover;">
+          <div
+            style="background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%); padding: 180px 0 0 0;">
             <div class="container">
               <div class="row">
                 <div class="col-12 col-lg-8">
@@ -147,7 +155,8 @@
                 <div class="col-12 col-lg-6">
                   <div class="py-5 ff-nunito text-white fz-20">
                     <p>
-                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um catálogo
+                      A Acquafiber é uma empresa com forte atuação nas regiões norte e nordeste do país e possui um
+                      catálogo
                       com mais 70 tipos de piscinas diferentes.
                     </p>
                   </div>
@@ -166,7 +175,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
     <!-- <div>
       <div class="container">
@@ -2380,48 +2389,54 @@
   </section>
 
   <section id="duvidas">
-    <div class="container py-awe-108 py-lg-awe-64 duvidas-fixo">
-      <div class="row">
-        <div
-          class="col-12 col-lg-1 d-flex justify-content-center justify-content-lg-start pb-awe-32 pb-lg-0 position-relative gotas">
-          <div class="pt-awe-6">
-            <img width="60" src="/dist/img/svg/whatsapp.svg" alt="">
+    <div class="duvidas-normal">
+      <div class="container py-awe-108 py-lg-awe-64">
+        <div class="row">
+          <div
+            class="col-12 col-lg-1 d-flex justify-content-center justify-content-lg-start pb-awe-32 pb-lg-0 position-relative gotas">
+            <div class="pt-awe-6">
+              <img width="60" src="/dist/img/svg/whatsapp.svg" alt="">
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-lg-6">
-          <div class="pb-awe-16">
-            <h5 class="ff-ubuntu fz-32 text-white text-center text-lg-start">
-              Ficou com dúvida ou podemos te ajudar de outra forma?
-            </h5>
+          <div class="col-12 col-lg-6">
+            <div class="pb-awe-16">
+              <h5 class="ff-ubuntu fz-32 text-white text-center text-lg-start">
+                Ficou com dúvida ou podemos te ajudar de outra forma?
+              </h5>
+            </div>
+            <div class="pt-awe-16 pb-awe-64 pb-lg-0 pt-lg-0">
+              <p class="ff-open-sans fz-18 text-white text-center text-lg-start">
+                Temos consultores preparados para te ajudar no que você precisar. Entre em contato e descubra como podemos
+                te surpreender.
+              </p>
+            </div>
           </div>
-          <div class="pt-awe-16 pb-awe-64 pb-lg-0 pt-lg-0">
-            <p class="ff-open-sans fz-18 text-white text-center text-lg-start">
-              Temos consultores preparados para te ajudar no que você precisar. Entre em contato e descubra como podemos
-              te surpreender.
-            </p>
+          <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-end align-items-center">
+            <a href="https://api.whatsapp.com/send?phone=5584999455686"
+              class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
+              fale com nosso atendimento
+            </a>
           </div>
-        </div>
-        <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-end align-items-center">
-          <a href="https://api.whatsapp.com/send?phone=5584999455686" class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
-            fale com nosso atendimento
-          </a>
         </div>
       </div>
     </div>
-    <div class="container duvidas-sticky py-awe-16">
-      <div class="row">
-        <div class="col-1">
-          <img width="60" src="/dist/img/svg/whatsapp.svg" alt="">
-        </div>
-        <div class="col-3 px-0 d-flex align-items-center">
-          <h5 class="ff-open-sans fz-18 text-white">
-            Ficou com dúvida ou podemos te ajudar de outra forma?
-          </h5>
-        </div>
-        <div class="col-8 d-flex justify-content-end align-items-center">
-          <a href="https://api.whatsapp.com/send?phone=5584999455686" class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
-            fale com nosso atendimento
-          </a>
+    <div class="duvidas-fixo">
+      <div class="container py-awe-16">
+        <div class="row">
+          <div class="col-1">
+            <img width="60" src="/dist/img/svg/whatsapp.svg" alt="">
+          </div>
+          <div class="col-3 px-0 d-flex align-items-center">
+            <h5 class="ff-open-sans fz-18 text-white">
+              Ficou com dúvida ou podemos te ajudar de outra forma?
+            </h5>
+          </div>
+          <div class="col-8 d-flex justify-content-end align-items-center">
+            <a href="https://api.whatsapp.com/send?phone=5584999455686"
+              class="btn btn-blue-2 text-white text-uppercase fz-16 fw-semi-bold ff-open-sans">
+              fale com nosso atendimento
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -2479,7 +2494,7 @@
                 <a href="https://api.whatsapp.com/send?phone=5584999455686"
                   class="text-black-3 text-orange-hover text-decoration-none">
                   +55 84 9.9945.5686
-                </a> | 
+                </a> |
                 <a href="https://api.whatsapp.com/send?phone=558435646986"
                   class="text-black-3 text-orange-hover text-decoration-none">
                   +55 84 3564.6986
@@ -2539,7 +2554,7 @@
   </footer>
 
   <div class="bg-blue-2 py-awe-32"></div>
-  <div class="bg-blue-3 d-flex justify-content-center py-awe-16">
+  <div class="bg-blue-3 d-flex justify-content-center py-awe-16" id="footer">
     <a href="https://agenciaweb.ifrn.edu.br/" target="_blank">
       <img src="/dist/img/svg/logo-awe.svg" alt="logo da awe">
     </a>
